--- a/test-scss/Offers_packs.html
+++ b/test-scss/Offers_packs.html
@@ -168,7 +168,7 @@
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <img src="./img/car.svg" alt="">
+                            <img src="./img/car.svg" class="w-100" alt="">
                         </div>
                         <div class="down__side pb-3 pt-md-3 pt-1">
 
@@ -201,7 +201,7 @@
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <img src="./img/car.svg" alt="">
+                            <img src="./img/car.svg" class="w-100" alt="">
                         </div>
                         <div class="down__side pb-3 pt-md-3 pt-1">
 
@@ -233,7 +233,7 @@
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <img src="./img/car.svg" alt="">
+                            <img src="./img/car.svg" class="w-100" alt="">
                         </div>
                         <div class="down__side pb-3 pt-md-3 pt-1">
 
@@ -265,7 +265,7 @@
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <img src="./img/car.svg" alt="">
+                            <img src="./img/car.svg" class="w-100" alt="">
                         </div>
                         <div class="down__side pb-3 pt-md-3 pt-1">
 
@@ -297,7 +297,7 @@
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <img src="./img/car.svg" alt="">
+                            <img src="./img/car.svg" class="w-100" alt="">
                         </div>
                         <div class="down__side pb-3 pt-md-3 pt-1">
 
@@ -329,7 +329,7 @@
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <img src="./img/car.svg" alt="">
+                            <img src="./img/car.svg" class="w-100" alt="">
                         </div>
                         <div class="down__side pb-3 pt-md-3 pt-1">
 
