--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -313,7 +313,7 @@
 
                         <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
+                                <img class="w-100" src="./img/Group 342.svg" alt="">
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
@@ -419,7 +419,7 @@
 
                         <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
+                                <img class="w-100" src="./img/Group 342.svg" alt="">
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
