--- a/test-scss/courses_2.html
+++ b/test-scss/courses_2.html
@@ -142,7 +142,7 @@
             </div>
         </div>
     </header>
-    <div class="filter__place center d-flex align-items-center justify-content-center mt-4 position-relative">
+    <div class="filter__place center d-flex align-items-center justify-content-center mt-md-4 position-relative">
         <div class="nav nav-tabs border-0 pb-4 d-flex flex-nowrap overflow-auto" id="nav-tab" role="tablist">
             <a class="filter-a f-14 c-light-text text-nowrap active show" active" id="nav-home-tab" data-toggle="tab"
                 href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">მიმოხილვა</a>
@@ -211,12 +211,12 @@
             </div>
         </div> -->
 
-
+        <img class="right-40 top-15 position-absolute d-block d-md-none pointer" src="./img/Path.svg" alt="" style="transform: rotate(-90deg);">
     </div>
 
 
 
-    <section class=" bc-banner py-60 overflow-hidden">
+    <section class=" bc-banner py-60 overflow-hidden mt-n3 mt-md-0 position-relative" style="z-index:350 ;">
         <div class="center">
             <div class="">
 
@@ -233,14 +233,14 @@
                             უნდუსტრიის აკადემია უზრუნველყოფს თქვენზე
                             მორგებული პრინციპით.</span>
                         <div class="mt-3 d-flex align-items-center flex-column flex-md-row mt-2">
-                            <span class="f-23 d-inline-block mt-2 helvetica-75 c-black">1250 ₾</span>
-                            <span class="f-20 d-inline-block mt-2 ml-3 helvetica-55 c-black like__remove">1250 ₾</span>
+                            <span class="f-23 course_2_price d-inline-block mt-2 helvetica-75 c-black">1250 ₾</span>
+                            <span class="f-20 d-inline-block mt-2 ml-md-3 helvetica-55 c-black like__remove">1250 ₾</span>
                         </div>
                         <div class="mt-2 mt-md-4 d-flex flex-column flex-md-row align-items-center">
                             <button style="max-width: 250px;"
-                                class="w-100  mt-2 helvetica-75 purple-button">რეგისტრაცია</button>
+                                class=" mt-2 helvetica-75 course-buttons purple-button">რეგისტრაცია</button>
                             <button style="max-width: 250px;"
-                                class="w-100 ml-0 ml-md-2 mt-2 helvetica-75 blue-button justify-content-center d-flex flex-nowrap">
+                                class="ml-0 ml-md-2 mt-2 course-buttons helvetica-75 blue-button justify-content-center d-flex flex-nowrap">
                                 <span class="pr-2">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16.64" height="16"
                                         viewBox="0 0 23.682 22.606">
@@ -262,8 +262,6 @@
     <section class="teams__section py-60 ">
         <div class="center">
             <div class="">
-
-
                 <ul class="nav nav-pills mb-3 filter__place mt-4 w-100 d-none d-md-flex justify-content-center"
                     id="pills-tab" role="tablist">
                     <li class="nav-item">
@@ -288,7 +286,7 @@
                     <div class="dropdown-menu w-100 mt-2 px-2 pb-3" id="pills-tab aria-labelledby=" dropdownMenuButton">
                         <ul class="nav nav-pills filter__place w-100 flex-column" id="pills-tab" role="tablist">
                             <li class="nav-item mt-3">
-                                <a class="filter-a f-14 c-light-text active" id="pills-home-tab" data-toggle="pill"
+                                <a class="filter-a f-14 c-light-text " id="pills-home-tab" data-toggle="pill"
                                     href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">ჯგუფი
                                     1</a>
                             </li>
@@ -443,9 +441,9 @@
                                 </div>
                             </div>
                             <div class="right__side bc-white br-tr br-br px-4 col-lg-7 col-12 py-4">
-                                <span class=" helvetica-75 d-inline-block mb-2 f-20 c-black text-center text-md-left">გნინი მუშკუდიანი</span>
-                                <span class=" helvetica-55 d-inline-block mb-3 lh-24 f-14 c-card-text text-center text-md-left">გრაფიკული
-                                    დიზაინერი</span>
+                                <p class=" helvetica-75 d-inline-block mb-2 f-20 c-black text-center text-md-left lector-name w-100">გნინი მუშკუდიანი</p>
+                                <p class=" helvetica-55 d-inline-block mb-3 lh-24 f-14 c-card-text text-center w-100 text-md-left">გრაფიკული
+                                    დიზაინერი</p>
                                 <span class=" helvetica-55 d-inline-block mb-3 lh-24 f-14 c-card-text text-center text-md-left">2013 დაიწყო
                                     სწავლა
                                     სამხატვრო აკადემიაში გრაფიკული დიზაინის ფაკულტეტზე. 2017 წელს გაიარა კურსები.</span>
@@ -473,9 +471,9 @@
                                 </div>
                             </div>
                             <div class="right__side bc-white br-tr br-br px-4 col-lg-7 col-12 py-4">
-                                <span class=" helvetica-75 d-inline-block mb-2 f-20 c-black text-center text-md-left">გნინი მუშკუდიანი</span>
-                                <span class=" helvetica-55 d-inline-block mb-3 lh-24 f-14 c-card-text text-center text-md-left">გრაფიკული
-                                    დიზაინერი</span>
+                                <p class=" helvetica-75 d-inline-block mb-2 f-20 c-black text-center text-md-left lector-name w-100">გნინი მუშკუდიანი</span>
+                                <p class=" helvetica-55 d-inline-block mb-3 lh-24 f-14 c-card-text text-center w-100 text-md-left">გრაფიკული
+                                    დიზაინერი</p>
                                 <span class=" helvetica-55 d-inline-block mb-3 lh-24 f-14 c-card-text text-center text-md-left">2013 დაიწყო
                                     სწავლა
                                     სამხატვრო აკადემიაში გრაფიკული დიზაინის ფაკულტეტზე. 2017 წელს გაიარა კურსები.</span>
@@ -514,7 +512,8 @@
                 <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_2">
                         <h2 class="mb-0">
-                            <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
+                            <!-- add active class da a tag -->
+                            <a class="align-items-center btn c-black d-flex active f-16 helvetica-75 px-0 justify-content-between text-left w-100"
                                 type="button" data-toggle="collapse" data-target="#collapseOne_2" aria-expanded="true"
                                 aria-controls="collapseOne_2">
                                 ლექცია 1 - შესავალი
@@ -1005,7 +1004,7 @@
                 <div class=" d-flex flex-column pb-5">
                     <h1 class="text-center f-30 mb-3 helvetica-75 c-black">შეთავაზება</h1>
                     <span class="text-center f-16 helvetica-55 c-card-text">არ გამოტოვო საუკეთესო შეთავაზებები!</span>
-                    <div class="offers__block d-flex flex-column align-items-center mt-md-3">
+                    <div class="offers__block d-flex flex-column align-items-center mt-3">
                         <div class="block d-flex align-items-center justify-content-between bc-white mt-md-4 mt-2 br-8 p-4">
                             <div class="left d-flex flex-column">
                                 <span class=" f-24 helvetica-75 c-black">აგრაფიკული დიზაინი</span>
@@ -1064,8 +1063,8 @@
         <div class="bdr mb-md-5">
 
             <div class="scroll-center d-flex flex-column align-items-center">
-                <div class="d-flex flex-column">
-                    <h1 class="f-30 mb-2 helvetica-75 text-center c-black">სტუდენტები კურსის შესახებ</h1>
+                <div class="d-flex flex-column mb-md-3">
+                    <h1 class="f-30 mb-2 helvetica-75 text-center c-black">ვიდეო</h1>
                     <span class="f-16 helvetica-55 text-center c-card-text">ნახე ჩვენი ვიდეოები გრაფიკული დიზაინის
                         კურსზე</span>
                 </div>
@@ -1073,18 +1072,18 @@
 
                     <div class="scroll-parent">
 
-                        <div class="mt-md-5 px-0 px-md-3 scroll-child w-100 course-block overflow-auto course_2-block">
+                        <div class="mt-md-4 px-0 px-md-3 scroll-child w-100 course-block overflow-auto course_2-block">
                             <div class="block  coure_2 scroll-block d-flex position-relative">
                                 <p class="f-16 helvetica-55 c-white">ჩვენი სტუდენტები: ლანა ჯოხაძე</p>
-
+                                <img class="play-icon" src="./img/play.png" alt="">
                             </div>
                             <div class="block  coure_2 scroll-block d-flex position-relative">
                                 <p class="f-16 helvetica-55 c-white">ჩვენი სტუდენტები: ლანა ჯოხაძე</p>
-
+                                <img class="play-icon" src="./img/play.png" alt="">
                             </div>
                             <div class="block  coure_2 scroll-block d-flex position-relative">
                                 <p class="f-16 helvetica-55 c-white">ჩვენი სტუდენტები: ლანა ჯოხაძე</p>
-
+                                <img class="play-icon" src="./img/play.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -1111,8 +1110,8 @@
     <section class="student__works py-60 bc-banner">
         <div class="scroll-center d-flex flex-column align-items-center">
             <div class="d-flex flex-column mt-4">
-                <h1 class="f-30 mb-2 helvetica-75 text-center c-black">სტუდენტების ნამუშევრები</h1>
-                <span class="f-16 helvetica-55 text-center c-card-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
+                <h1 class="f-30 mb-2 helvetica-75 text-center px-5 px-md-0 c-black">სტუდენტების ნამუშევრები</h1>
+                <span class="f-16 helvetica-55 px-5 px-md-0 text-center c-card-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
                     უახლოესი ინფორმაცია მასტერკლასებზე.</span>
             </div>
             <div class="scroll-parent">
