--- a/test-scss/competition.html
+++ b/test-scss/competition.html
@@ -397,13 +397,12 @@
             </div>
             <div class="cart__body pb-4 d-flex flex-column justify-content-between">
                 <div class="up__side">
-                    add on-delete class to block for delete animation
+                    <!-- add on-delete class to block for delete animation -->
                     <div class="block mt-4 d-flex align-items-stretch position-relative">
-                        <div
-                            class="left col-5 d-flex align-items-end justify-content-end p-0 bc-light-blue br-tl br-bl">
-                            <img class="col-10 px-0 pt-3" src="./img/face.svg" alt="">
+                        <div class="left col-4 d-flex align-items-end bc-light-blue justify-content-end p-0 br-8">
+                            <img class="h-100 px-0" src="./img/cart-face.svg" alt="">
                         </div>
-                        <div class="right bc-white br-tr br-br col-7 pr-0 d-flex flex-column py-3">
+                        <div class="right bc-white br-tr br-br col-8 pr-0 d-flex flex-column pt-2">
                             <span class="c-black helvetica-75 f-14 ">
                                 WEB დეველოპმენტი
                             </span>
@@ -420,74 +419,80 @@
                             </div>
                         </div>
                         <div class="delete position-absolute">
-                            <svg id="noun_Delete_1699758" xmlns="http://www.w3.org/2000/svg" width="14.385" height="16.584" viewBox="0 0 14.385 16.584">
+                            <svg id="noun_Delete_1699758" xmlns="http://www.w3.org/2000/svg" width="14.385"
+                                height="16.584" viewBox="0 0 14.385 16.584">
                                 <g id="Group_1599" data-name="Group 1599" transform="translate(0 0)">
-                                  <path id="Path_15627" data-name="Path 15627" d="M.66,0A.648.648,0,0,0,0,.66V4.685a.648.648,0,0,0,.66.66.648.648,0,0,0,.66-.66V.66A.648.648,0,0,0,.66,0Z" transform="translate(4.993 7.962)" fill="#ffffff"/>
-                                  <path id="Path_15628" data-name="Path 15628" d="M.66,0A.648.648,0,0,0,0,.66V4.685a.648.648,0,0,0,.66.66.648.648,0,0,0,.66-.66V.66A.648.648,0,0,0,.66,0Z" transform="translate(8.072 7.962)" fill="#ffffff"/>
-                                  <path id="Path_15629" data-name="Path 15629" d="M1.628,6.488v8.336a1.765,1.765,0,0,0,1.76,1.76H11a1.765,1.765,0,0,0,1.76-1.76V6.488a1.771,1.771,0,0,0,1.628-1.76v-.88a1.765,1.765,0,0,0-1.76-1.76H10.118V1.76A1.765,1.765,0,0,0,8.358,0H6.027a1.765,1.765,0,0,0-1.76,1.76v.33H1.76A1.765,1.765,0,0,0,0,3.849v.88A1.771,1.771,0,0,0,1.628,6.488ZM11,15.264H3.387a.441.441,0,0,1-.44-.44V6.488h8.49v8.336A.441.441,0,0,1,11,15.264ZM5.587,1.76a.441.441,0,0,1,.44-.44H8.358a.441.441,0,0,1,.44.44v.33H5.587ZM1.32,3.849a.441.441,0,0,1,.44-.44H12.625a.441.441,0,0,1,.44.44v.88a.441.441,0,0,1-.44.44H1.76a.441.441,0,0,1-.44-.44Z" fill="#ffffff"/>
+                                    <path id="Path_15627" data-name="Path 15627"
+                                        d="M.66,0A.648.648,0,0,0,0,.66V4.685a.648.648,0,0,0,.66.66.648.648,0,0,0,.66-.66V.66A.648.648,0,0,0,.66,0Z"
+                                        transform="translate(4.993 7.962)" fill="#ffffff" />
+                                    <path id="Path_15628" data-name="Path 15628"
+                                        d="M.66,0A.648.648,0,0,0,0,.66V4.685a.648.648,0,0,0,.66.66.648.648,0,0,0,.66-.66V.66A.648.648,0,0,0,.66,0Z"
+                                        transform="translate(8.072 7.962)" fill="#ffffff" />
+                                    <path id="Path_15629" data-name="Path 15629"
+                                        d="M1.628,6.488v8.336a1.765,1.765,0,0,0,1.76,1.76H11a1.765,1.765,0,0,0,1.76-1.76V6.488a1.771,1.771,0,0,0,1.628-1.76v-.88a1.765,1.765,0,0,0-1.76-1.76H10.118V1.76A1.765,1.765,0,0,0,8.358,0H6.027a1.765,1.765,0,0,0-1.76,1.76v.33H1.76A1.765,1.765,0,0,0,0,3.849v.88A1.771,1.771,0,0,0,1.628,6.488ZM11,15.264H3.387a.441.441,0,0,1-.44-.44V6.488h8.49v8.336A.441.441,0,0,1,11,15.264ZM5.587,1.76a.441.441,0,0,1,.44-.44H8.358a.441.441,0,0,1,.44.44v.33H5.587ZM1.32,3.849a.441.441,0,0,1,.44-.44H12.625a.441.441,0,0,1,.44.44v.88a.441.441,0,0,1-.44.44H1.76a.441.441,0,0,1-.44-.44Z"
+                                        fill="#ffffff" />
                                 </g>
-                              </svg>
-                              
+                            </svg>
+
                         </div>
                     </div>
 
 
                 </div>
-                <div class="down__side px-2  py-3 br-8">
+                <div class="down__side px-1  py-3 br-8">
                     <span class="c-light-text mt-5 helvetica-55 d-flex f-14 ">
                         დაამატე კურსი და მიიღე ფასდაკლება
                     </span>
                     <div class=" position-relative">
-                        <div class="col-12 p-0 d-flex pb-3 pb-md-0 flex-nowrap overflow-auto">
-                            <div class="block col-12 pr-2 pt-4 pl-0 d-flex align-items-stretch">
+                        <div class="col-12 p-0 d-flex pb-3 pb-md-0 flex-nowrap " style="    overflow-x: auto;
+                        overflow-y: hidden;">
+                            <div class="block col-12 pr-2 pl-0 d-flex align-items-stretch mt-4">
                                 <div
-                                    class="left col-5 d-flex align-items-end justify-content-end p-0 bc-light-blue br-tl br-bl">
+                                    class="left col-4 d-flex align-items-end justify-content-end p-0 bc-light-blue br-tl br-bl">
                                     <img class="col-10 px-0 pt-3" src="./img/face.svg" alt="">
                                 </div>
-                                <div class="right bc-white br-tr br-br col-7 pr-0 d-flex flex-column py-3">
+                                <div class="right bc-white br-tr br-br col-8 pr-0 d-flex flex-column pt-1">
                                     <span class="c-black helvetica-75 f-14 ">
-                                        WEB დეველოპმენტი
+                                        ციფრული პროექტების მართვა
                                     </span>
                                     <span class="c-light-text helvetica-55 f-12 ">
                                         ქრისტინა კემულარია
                                     </span>
-                                    <div class="mt-4 d-flex align-items-center justify-content-between flex-wrap">
-                                        <img class="bc-banner pointer br-20 p-2 height-25" style="background-color: #F3F3F4;"
-                                            src="./img/plus.svg" alt="">
+                                    <div class="mt-1 d-flex align-items-end justify-content-between flex-wrap">
+                                        <span class=" bc-green c-white br-8 py-1 helvetica-55 f-12 px-2 pointer">+
+                                            დამატება</span>
                                         <div class="d-flex flex-column">
 
                                             <span
-                                                class="text__c br-c-light-blue  c-black f-16 pr-2 helvetica-55 like__remove">1250
+                                                class="text__c br-c-light-blue  c-black f-16 pr-2 helvetica-75 like__remove">1250
                                                 ₾</span>
-                                            <span
-                                                class="c-black f-16 pr-2 helvetica-55">1250
+                                            <span class="c-black f-12 pr-2 helvetica-55">1250
                                                 ₾</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="block col-12 pr-2 pt-4 pl-0 d-flex align-items-stretch">
+                            <div class="block col-12 pr-2 pl-0 d-flex align-items-stretch mt-4">
                                 <div
-                                    class="left col-5 d-flex align-items-end justify-content-end p-0 bc-light-blue br-tl br-bl">
+                                    class="left col-4 d-flex align-items-end justify-content-end p-0 bc-light-blue br-tl br-bl">
                                     <img class="col-10 px-0 pt-3" src="./img/face.svg" alt="">
                                 </div>
-                                <div class="right bc-white br-tr br-br col-7 pr-0 d-flex flex-column py-3">
+                                <div class="right bc-white br-tr br-br col-8 pr-0 d-flex flex-column pt-1">
                                     <span class="c-black helvetica-75 f-14 ">
-                                        WEB დეველოპმენტი
+                                        ციფრული პროექტების მართვა
                                     </span>
                                     <span class="c-light-text helvetica-55 f-12 ">
                                         ქრისტინა კემულარია
                                     </span>
-                                    <div class="mt-4 d-flex align-items-center justify-content-between flex-wrap">
-                                        <img class="bc-banner pointer br-20 p-2 height-25" style="background-color: #F3F3F4;"
-                                            src="./img/plus.svg" alt="">
-                                        <div class="d-flex flex-column">
+                                    <div class="mt-1 d-flex align-items-end justify-content-between flex-wrap">
+                                        <span class=" bc-green c-white br-8 py-1 helvetica-55 f-12 px-2 pointer">+
+                                            დამატება</span>
+                                        <div class="d-flex flex-column align-items-end">
 
-                                            <span
-                                                class="text__c br-c-light-blue  c-black f-16 pr-2 helvetica-55 like__remove">1250
+                                            <span 
+                                                class="text__c br-c-light-blue f-16 pr-2 helvetica-75 like__remove">1250
                                                 ₾</span>
-                                            <span
-                                                class="c-black f-16 pr-2 helvetica-55">1250
+                                            <span class="c-black f-12 pr-2 helvetica-55">1250
                                                 ₾</span>
                                         </div>
                                     </div>
@@ -538,7 +543,7 @@
                                 <span class="f-14 helvetica-55 c-black">1250₾</span>
                             </li>
                         </ul>
-                        <button class=" blue-button f-14 mt-2 w-100">go to checkout</button>
+                        <button class=" blue-button helvetica-75 f-14 mt-2 w-100">go to checkout</button>
                         <div class="d-flex justify-content-center align-items-center mt-3">
                             <img src="./img/visa.svg" alt="">
                             <img class="ml-2" src="./img/mastercard.svg" alt="">
